Optimize left cloud offset and dimensions to prevent overlap with the Lessons heading

--- a/contemporary-world/src/components/home/CloudOverlay/CloudOverlay.css
+++ b/contemporary-world/src/components/home/CloudOverlay/CloudOverlay.css
@@ -27,11 +27,12 @@
   pointer-events: none;
 }
 
-/* Left Cloud Layer */
+/* Left Cloud Layer - Shifted left & size optimized to avoid overlapping Lesson text */
 .cloud-layer--1 {
-  left: -16%;
-  width: 50vw;
-  min-width: 600px;
+  left: -20%;
+  width: 38vw;
+  min-width: 420px;
+  max-width: 580px;
   opacity: 0.95;
   animation: floatLeft 9s ease-in-out infinite alternate;
 }
@@ -83,8 +84,9 @@
     top: -130px;
   }
   .cloud-layer--1 {
-    width: 52vw;
-    min-width: 500px;
+    left: -22%;
+    width: 40vw;
+    min-width: 400px;
   }
   .cloud-layer--2 {
     width: 52vw;
@@ -98,8 +100,9 @@
     top: -110px;
   }
   .cloud-layer--1 {
-    width: 55vw;
-    min-width: 450px;
+    left: -25%;
+    width: 40vw;
+    min-width: 350px;
   }
   .cloud-layer--2 {
     width: 55vw;
@@ -116,8 +119,9 @@
     top: -80px;
   }
   .cloud-layer--1 {
-    width: 60vw;
-    min-width: 320px;
+    left: -28%;
+    width: 42vw;
+    min-width: 280px;
   }
   .cloud-layer--2 {
     width: 60vw;
@@ -134,8 +138,9 @@
     top: -55px;
   }
   .cloud-layer--1 {
-    width: 65vw;
-    min-width: 220px;
+    left: -32%;
+    width: 45vw;
+    min-width: 200px;
   }
   .cloud-layer--2 {
     width: 65vw;
